syntax = "proto3";

package proto;

service lan_doh {
    rpc GetGame (GetGameRequest) returns (stream GetGameResponse);
    rpc GetFile (GetFileRequest) returns (stream GetFileResponse);
    rpc ListGames ( ListGamesRequest ) returns ( ListGamesResponse);
    rpc Healthz ( HealthzRequest ) returns ( HealthzResponse );
}

message ListGamesRequest {}

message ListGamesResponse {
    repeated string games = 1;
}

message GetGameRequest {
    string name = 1;
}

message GetGameResponse {
    oneof game_response {
        File file = 1;
        RegistryKey reg_key = 2;
    }
}

message GetFileRequest {
    string path = 1;
}

message GetFileResponse {
    oneof file_response {
        bytes chunk = 1;
        string hash = 2;
    }
}

message FileMetaData {
    string extension = 1;
    uint64 file_size = 2;
}

message DirectoryMetaData {
    repeated File children = 1;
}

message Directory {
    string name = 1;
    repeated File children = 2;
}

message File {
    string name = 1;
    string path = 2;
    FileLocation file_location = 3;
    oneof file_type {
        FileMetaData file_meta_data = 4;
        DirectoryMetaData dir = 5;
        bytes chunk = 6;
        string hash = 7;
    }
}

message Game {
    string name = 1;
    string path = 2;
    Directory directory = 3;
    repeated RegistryKey reg_key = 4;
}

enum FileLocation {
    Default = 0;
    AppDataRoaming = 1;
    AppDataLocal = 2;
    AppDataLocalLow = 3;
    ProgramData = 4;
}

message RegistryKey {
    string type = 1;
    string path = 2;
    string key = 3;
    string value = 4;
}

message HealthzRequest {}

message HealthzResponse{
    bool EventListener = 1;
    bool Broadcaster = 2;
    string address = 3;
    string id = 4;
    string nickname = 5;
}